# audio_converter

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  ffmpeg.rs  lib.rs  main.rs  tasks_manager.rs  transcode.rs
src/models/: audio_file.rs  mod.rs  settings.rs  task.rs
src/ui/: album_art_viewer.rs  file_info.rs  mod.rs  settings.rs  task_queue.rs
