[package]
name = "audio_converter"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.33"
eframe = { version = "0.33", default-features = false, features = ["accesskit", "default_fonts", "glow", "persistence", "wayland", "x11"] }
egui_extras = { version = "0.33", features = ["default", "image"] }
ron = { version = "0.12" }

env_logger = { version = "0.11.8", features = ["auto-color", "humantime"] }
serde = { version = "1", features = ["derive"] }
rfd = "=0.16.0"

ffmpeg-next = "8"
image = "0.25"
base64 = "0.22"
byteorder = "1.5"
